plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.7'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.nowayback'
version = '0.0.1-SNAPSHOT'
description = 'funding'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

ext {
    set('springCloudVersion', "2025.0.0")
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'


    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // Lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // Open feign
    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'

    // Apache HttpClient 5
    implementation 'io.github.openfeign:feign-hc5:13.1'

    // Kafka
    implementation 'org.springframework.kafka:spring-kafka'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // Redisson
    implementation 'org.redisson:redisson-spring-boot-starter:3.52.0'

    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.8'

    // WireMock
    testImplementation 'org.springframework.cloud:spring-cloud-starter-contract-stub-runner'

    // H2 Database (테스트용)
    testRuntimeOnly 'com.h2database:h2'

    // Test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

test {
    useJUnitPlatform()

    jvmArgs '-XX:+EnableDynamicAgentLoading'
}

dependencyManagement {
    imports {
        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
    }
}

tasks.named('test') {
    useJUnitPlatform()
}
